--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 ENV = 'development'
 
 # 开发环境
-VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_API = 'api_dev'
 
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
