--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
   ],
   "dependencies": {
     "@riophae/vue-treeselect": "0.1.0",
-    "ali-oss": "^6.4.0",
+    "ali-oss": "6.4.0",
     "axios": "0.18.1",
-    "clipboard": "^2.0.4",
+    "clipboard": "2.0.4",
     "echarts": "4.2.1",
     "element-ui": "2.11.1",
     "fuse.js": "3.4.4",
@@ -48,7 +48,7 @@
     "path-to-regexp": "2.4.0",
     "screenfull": "4.2.0",
     "vue": "2.6.10",
-    "vue-baidu-map": "^0.21.22",
+    "vue-baidu-map": "0.21.22",
     "vue-count-to": "1.0.13",
     "vue-cropper": "0.4.9",
     "vue-quill-editor": "3.0.6",
@@ -60,11 +60,11 @@
     "@babel/core": "7.0.0",
     "@babel/register": "7.0.0",
     "@vue/cli-plugin-babel": "3.5.3",
-    "@vue/cli-plugin-eslint": "^3.9.1",
+    "@vue/cli-plugin-eslint": "3.9.1",
     "@vue/cli-plugin-unit-jest": "3.5.3",
     "@vue/cli-service": "3.5.3",
     "@vue/test-utils": "1.0.0-beta.29",
-    "autoprefixer": "^9.5.1",
+    "autoprefixer": "9.5.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
@@ -74,17 +74,17 @@
     "eslint": "5.15.3",
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
-    "http-proxy-middleware": "^0.19.1",
+    "http-proxy-middleware": "0.19.1",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "mockjs": "1.0.1-beta3",
-    "node-sass": "^4.13.0",
+    "node-sass": "4.13.0",
     "plop": "2.3.0",
-    "runjs": "^4.3.2",
-    "sass-loader": "^7.1.0",
+    "runjs": "4.3.2",
+    "sass-loader": "7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
     "script-loader": "0.7.2",
-    "serve-static": "^1.13.2",
+    "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.0",
     "vue-template-compiler": "2.6.10"
