--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "clipboard": "2.0.4",
     "echarts": "4.2.1",
     "element-ui": "2.11.1",
+    "file-saver": "^2.0.2",
     "fuse.js": "3.4.4",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "screenfull": "4.2.0",
+    "script-loader": "^0.7.2",
     "vue": "2.6.10",
     "vue-baidu-map": "0.21.22",
     "vue-count-to": "1.0.13",
@@ -54,7 +56,8 @@
     "vue-quill-editor": "3.0.6",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "xlsx": "^0.16.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
@@ -83,7 +86,7 @@
     "runjs": "4.3.2",
     "sass-loader": "7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
-    "script-loader": "0.7.2",
+    "script-loader": "^0.7.2",
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.0",
