--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "screenfull": "4.2.0",
     "script-loader": "^0.7.2",
     "vue": "2.6.10",
-    "vue-baidu-map": "0.21.22",
+    "vue-baidu-map": "^0.21.22",
     "vue-count-to": "1.0.13",
     "vue-cropper": "0.4.9",
     "vue-quill-editor": "3.0.6",
