--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "clipboard": "2.0.4",
     "echarts": "4.2.1",
     "element-ui": "2.11.1",
+    "enhanced-resolve": "^4.1.1",
     "file-saver": "^2.0.2",
     "fuse.js": "3.4.4",
     "js-cookie": "2.2.0",
-    "js-md5": "^0.7.3",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
