--- a/package.json
+++ b/package.json
@@ -83,9 +83,10 @@
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "mockjs": "1.0.1-beta3",
+    "node-sass": "^4.14.1",
     "plop": "2.3.0",
     "runjs": "4.3.2",
-    "sass-loader": "7.1.0",
+    "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
     "script-loader": "^0.7.2",
     "serve-static": "1.13.2",
